--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,14 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'org.jetbrains.dokka' version '1.4.32'
+	id 'com.github.johnrengelman.shadow' version '7.0.0'
+
 }
+shadowJar {
+	baseName = 'demo'
+	version = '0.0.1'
+}
+
 
 java{
 	compileJava.options.encoding = 'UTF-8'
@@ -26,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-config:5.5.0'
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.postgresql:postgresql:42.2.23'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
